--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-19 10:03+0200\n"
+"POT-Creation-Date: 2021-03-19 12:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -39,6 +39,30 @@ msgid "Show all actions"
 msgstr "Näytä kaikki toimenpiteet"
 
 #: actions/action_admin.py
+msgid "By last updated"
+msgstr "Viimeisimmän päivityskerran mukaan"
+
+#: actions/action_admin.py
+msgid "No filtering"
+msgstr "Ei suodatusta"
+
+#: actions/action_admin.py
+msgid "In the last 7 days"
+msgstr "Edellisen 7 päivän aikana"
+
+#: actions/action_admin.py
+msgid "7–30 days ago"
+msgstr "7–30 päivää sitten"
+
+#: actions/action_admin.py
+msgid "1–3 months ago"
+msgstr "1–3 kuukautta sitten"
+
+#: actions/action_admin.py
+msgid "More than 3 months ago"
+msgstr "Päälle 3 kuukautta sitten"
+
+#: actions/action_admin.py
 msgid "Filter actions"
 msgstr "Suodata toimenpiteitä"
 
@@ -57,6 +81,10 @@ msgstr "Haku"
 #: actions/action_admin.py actions/apps.py actions/wagtail_admin.py
 msgid "Actions"
 msgstr "Toimenpiteet"
+
+#: actions/action_admin.py
+msgid "Last updated"
+msgstr "Viimeksi päivitetty"
 
 #: actions/action_admin.py people/templates/people/chooser_results.html
 #: templates/aplans_admin/own_actions_panel.html
