--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,11 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-12 15:51+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2022-02-02 15:51+0200\n"
+"PO-Revision-Date: 2022-02-03 09:55+0200\n"
+"Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
+"Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,6 +21,10 @@ msgstr ""
 #: actions/action_admin.py actions/admin.py
 msgid "Contact person"
 msgstr "Yhteyshenkilö"
+
+#: actions/action_admin.py people/templates/people/chooser_results.html
+msgid "Organization"
+msgstr "Organisaatio"
 
 #: actions/action_admin.py templates/aplans_admin/own_actions_panel.html
 msgid "Own actions"
@@ -252,7 +256,7 @@ msgid "contact persons"
 msgstr "yhteyshenkilöt"
 
 #: actions/models/action.py actions/models/plan.py content/models.py
-#: indicators/models.py notifications/models.py
+#: indicators/models.py notifications/models.py orgs/models.py
 msgid "plan"
 msgstr "toimenpideohjelma"
 
@@ -413,8 +417,8 @@ msgstr "Yhteyshenkilöt nimetty"
 msgid "Active tasks"
 msgstr "Aktiivisia tehtäviä"
 
-#: actions/models/action.py indicators/models.py people/models.py
-#: users/models.py
+#: actions/models/action.py indicators/models.py orgs/models.py
+#: people/models.py
 msgid "organization"
 msgstr "organisaatio"
 
@@ -426,7 +430,8 @@ msgstr "toimenpiteen vastuutaho"
 msgid "action responsible parties"
 msgstr "toimenpiteen vastuutahot"
 
-#: actions/models/action.py indicators/models.py people/models.py
+#: actions/models/action.py indicators/models.py orgs/models.py
+#: people/models.py
 msgid "person"
 msgstr "henkilö"
 
@@ -608,6 +613,14 @@ msgid "impact group actions"
 msgstr "toimenpiteen vaikuttavuusryhmät"
 
 #: actions/models/category.py
+msgid "Multiple"
+msgstr ""
+
+#: actions/models/category.py
+msgid "Single"
+msgstr ""
+
+#: actions/models/category.py
 msgid "usable for action categorization"
 msgstr "käytetään toimenpiteiden luokitukseen"
 
@@ -713,7 +726,7 @@ msgstr "Riippuvuuksista muodostuu silmukka. Jätä tyhjäksi jos kyseessä on yl
 
 #: actions/models/category.py
 msgid "Parent must be of same type"
-msgstr ""
+msgstr "Yläluokan on oltava samaa tyyppiä"
 
 #: actions/models/category.py
 msgid "category_richtexts"
@@ -732,10 +745,8 @@ msgid "metadata_choices"
 msgstr "metatiedon valinnat"
 
 #: actions/models/category.py
-#, fuzzy
-#| msgid "metadata_richtexts"
 msgid "metadata_numeric_values"
-msgstr "metatiedon tekstisisällöt"
+msgstr "metatiedon numeroarvot"
 
 #: actions/models/plan.py
 msgid "site URL"
@@ -830,15 +841,21 @@ msgid "Primary language must not be selected"
 msgstr "Ensisijainen kieli ei voi olla valittuna"
 
 #: actions/models/plan.py indicators/apps.py indicators/blocks.py
-#: indicators/templates/indicators/edit_values.html
-#: indicators/templates/indicators/edit_values_new.html
-#: indicators/wagtail_admin.py
+#: indicators/templates/indicators/edit_values.html indicators/wagtail_admin.py
 msgid "Indicators"
 msgstr "Mittarit"
 
 #: actions/models/plan.py
 msgid "host name"
 msgstr "domain-osoite"
+
+#: actions/models/plan.py
+msgid "base path"
+msgstr "peruspolku"
+
+#: actions/models/plan.py
+msgid "Base path must begin with a '/' and not end with '/'"
+msgstr ""
 
 #: actions/models/plan.py
 msgid "Hostname must be a fully qualified domain name in lower-case only"
@@ -981,6 +998,10 @@ msgstr "sisäänkirjautumisen otsikko"
 #: admin_site/models.py
 msgid "login button text"
 msgstr "sisäänkirjautumispainikkeen teksti"
+
+#: admin_site/models.py
+msgid "use email field of ID Token"
+msgstr ""
 
 #: admin_site/templates/dal_admin_filters/autocomplete-filter.html
 #, python-format
@@ -1132,6 +1153,14 @@ msgstr "sivuston yleisen sisältö"
 #: content/models.py
 msgid "site general contents"
 msgstr "sivuston yleiset sisällöt"
+
+#: documents/chooser.py
+msgid "Server Error"
+msgstr ""
+
+#: documents/chooser.py
+msgid "Report this error to your webmaster with the following information:"
+msgstr "Kerro tästä virheestä palvelun ylläpidolle seuraavin tiedoin:"
 
 #: documents/models.py
 msgid "document"
@@ -1413,11 +1442,21 @@ msgstr "On kaavio"
 
 #: indicators/models.py
 msgid "Deadlines for value updates are currently only possible for yearly indicators"
-msgstr ""
+msgstr "Ainoastaan vuosittaisille mittareille voi antaa takarajan arvojen päivittämiselle"
 
 #: indicators/models.py
 msgid "There is already an indicator value for the year preceding the deadline"
-msgstr ""
+msgstr "Mittarille on jo arvo vuodelle joka edeltää takarajaa"
+
+#: indicators/models.py
+#, python-format
+msgid "Quantity must be the same as in common indicator (%s)"
+msgstr "Suureen on oltava sama kuin yleisellä mittarilla (%s)"
+
+#: indicators/models.py
+#, python-format
+msgid "Unit must be the same as in common indicator (%s)"
+msgstr "Yksikön on oltava sama kuin yleisellä mittarilla (%s)"
 
 #: indicators/models.py
 msgid "dimension"
@@ -1442,6 +1481,14 @@ msgstr "mittarin dimensio"
 #: indicators/models.py
 msgid "indicator dimensions"
 msgstr "mittarin dimensiot"
+
+#: indicators/models.py
+msgid "common indicator dimension"
+msgstr "yleisen mittarin dimensio"
+
+#: indicators/models.py
+msgid "common indicator dimensions"
+msgstr "yleisen mittarin dimensiot"
 
 #: indicators/models.py
 msgid "indicator levels"
@@ -1560,22 +1607,18 @@ msgid "Permission denied"
 msgstr "Ei käyttövaltuuksia"
 
 #: indicators/templates/indicators/edit_values.html
-#: indicators/templates/indicators/edit_values_new.html
 msgid "Home"
 msgstr "Etusivu"
 
 #: indicators/templates/indicators/edit_values.html
-#: indicators/templates/indicators/edit_values_new.html
 msgid "Indicator data"
 msgstr "Mittarin data"
 
 #: indicators/templates/indicators/edit_values.html
-#: indicators/templates/indicators/edit_values_new.html
 msgid "Observations"
 msgstr "Havainnot"
 
 #: indicators/templates/indicators/edit_values.html
-#: indicators/templates/indicators/edit_values_new.html
 msgid "Goals"
 msgstr "Tavoitteet"
 
@@ -1636,6 +1679,14 @@ msgid "Edit indicator data"
 msgstr "Muokkaa mittarin dataa"
 
 #: indicators/wagtail_admin.py
+msgid "Quantities"
+msgstr "Suureet"
+
+#: indicators/wagtail_admin.py
+msgid "General"
+msgstr "Yleinen"
+
+#: indicators/wagtail_admin.py
 msgid "Units"
 msgstr "Yksiköt"
 
@@ -1644,12 +1695,45 @@ msgid "[not in active plan]"
 msgstr "[ei mukana toimenpideohjelmassa]"
 
 #: indicators/wagtail_admin.py
+msgid "Dimensions must be the same as in common indicator"
+msgstr "Dimensioiden täytyy olla samat kuin yleisessä mittarissa"
+
+#: indicators/wagtail_admin.py
 msgid "Indicator for actions"
 msgstr "Mittari toimenpiteille"
 
 #: indicators/wagtail_admin.py
+msgid "none"
+msgstr ""
+
+#: indicators/wagtail_admin.py
+#, python-format
+msgid "If you change the dimensions of this indicator (currently %(dimensions)s), its %(num)d value will be deleted."
+msgid_plural "If you change the dimensions of this indicator (currently %(dimensions)s), all its %(num)d values will be deleted."
+msgstr[0] "Jos muutat tämän mittarin dimensioita (nyt %(dimensions)s), sen %(num)d arvo poistetaan."
+msgstr[1] "msgstr[0] \"Jos muutat tämän mittarin dimensioita (nyt %(dimensions)s), kaikki sen %(num)d arvoa poistetaan.\""
+
+#: indicators/wagtail_admin.py
+#, python-format
+msgid "This indicator is linked to a common indicator, so quantity, unit and dimensions cannot be edited. Current quantity: %(quantity)s; unit: %(unit)s; dimensions: %(dimensions)s"
+msgstr "Mittari on kytketty yleiseen mittariin, joten sen suuretta (%(quantity)s), yksikköä (%(unit)s) tai dimensioita (%(dimensions)s) ei voi muokata."
+
+#: indicators/wagtail_admin.py
 msgid "Unit"
 msgstr "Yksikkö"
+
+#: indicators/wagtail_admin.py
+msgid "Dimensions must be the same as in all indicators linked to this one"
+msgstr "Dimensioiden täytyy olla samat kuin kaikissa tähän mittariin linkitetyissä mittareissa"
+
+#: indicators/wagtail_admin.py
+msgid "Common indicators"
+msgstr "Yleiset mittarit"
+
+#: indicators/wagtail_admin.py
+#, python-format
+msgid "This common indicator has indicators linked to it, so quantity, unit and dimensions cannot be edited. Current quantity: %(quantity)s; unit: %(unit)s; dimensions: %(dimensions)s"
+msgstr "Mittari on linkitetty muihin mittareihin, joten sen suuretta (%(quantity)s), yksikköä (%(unit)s) tai dimensioita (%(dimensions)s) ei voi muokata.<"
 
 #: notifications/apps.py
 msgid "Notifications"
@@ -1777,19 +1861,19 @@ msgstr "Aika jolloin organisaatiota päivitettiin"
 
 #: orgs/models.py
 msgid "An organization category, e.g. committee"
-msgstr ""
+msgstr "Organisaation luokka, esimerkiksi komitea"
 
 #: orgs/models.py
 msgid "A primary name, e.g. a legally recognized name"
-msgstr ""
+msgstr "Virallinen nimi"
 
 #: orgs/models.py
 msgid "A commonly used abbreviation"
-msgstr ""
+msgstr "Yleisesti käytetty lyhenne"
 
 #: orgs/models.py
 msgid "A distinct name for this organization (generated automatically)"
-msgstr ""
+msgstr "Organisaation yksikäsitteinen nimi (luodaan automaattisesti)"
 
 #: orgs/models.py
 msgid "A date of founding"
@@ -1925,7 +2009,7 @@ msgstr "johdanto"
 
 #: pages/wagtail_admin.py
 msgid "More"
-msgstr ""
+msgstr "Lisää"
 
 #: people/admin.py
 msgid "Is contact person"
@@ -1996,7 +2080,7 @@ msgstr "postiosoite"
 msgid "What is this person's organization"
 msgstr "Aseta henkilön organisaatio"
 
-#: people/models.py users/models.py
+#: people/models.py
 msgid "user"
 msgstr "käyttäjä"
 
@@ -2019,10 +2103,6 @@ msgstr "henkilöt"
 #: people/models.py
 msgid "Person with this email already exists"
 msgstr "Tällä sähköpostiosoitteella on jo henkilö"
-
-#: people/templates/people/chooser_results.html
-msgid "Organization"
-msgstr "Organisaatio"
 
 #: people/wagtail_admin.py
 msgid "has logged in"
@@ -2096,6 +2176,10 @@ msgid "Edit this indicator"
 msgstr "Muokkaa tätä mittaria"
 
 #: templates/modeladmin/create.html templates/modeladmin/edit.html
+msgid "This page has unsaved changes."
+msgstr "Sivulla on tallentamattomia muutoksia"
+
+#: templates/modeladmin/create.html templates/modeladmin/edit.html
 msgid "Saving…"
 msgstr "Tallennetaan…"
 
@@ -2156,13 +2240,11 @@ msgstr "Kirjaudu ulos"
 msgid "Users"
 msgstr "Käyttäjät"
 
-#: users/models.py
-msgid "admin for organization"
-msgstr "ylläpitäjä organisaatiolle"
+#~ msgid "admin for organization"
+#~ msgstr "ylläpitäjä organisaatiolle"
 
-#: users/models.py
-msgid "admins for organization"
-msgstr "ylläpitäjät organisaatiolle"
+#~ msgid "admins for organization"
+#~ msgstr "ylläpitäjät organisaatiolle"
 
 #~ msgid "Responsible organization"
 #~ msgstr "Vastuuorganisaatio"
