Make last login message reflect the content

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-02 15:51+0200\n"
-"PO-Revision-Date: 2022-02-03 09:55+0200\n"
+"POT-Creation-Date: 2022-02-03 10:02+0200\n"
+"PO-Revision-Date: 2022-02-03 10:02+0200\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
 "Language: fi\n"
@@ -2109,8 +2109,8 @@ msgid "Person with this email already exists"
 msgstr "Tällä sähköpostiosoitteella on jo henkilö"
 
 #: people/wagtail_admin.py
-msgid "has logged in"
-msgstr "on kirjautunut sisään"
+msgid "last login"
+msgstr "kirjautunut viimeksi"
 
 #: people/wagtail_admin.py
 msgid "contact for indicators"
