--- a/locale/django.pot
+++ b/locale/django.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-02 15:51+0200\n"
+"POT-Creation-Date: 2022-02-03 10:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2103,7 +2103,7 @@ msgid "Person with this email already exists"
 msgstr ""
 
 #: people/wagtail_admin.py
-msgid "has logged in"
+msgid "last login"
 msgstr ""
 
 #: people/wagtail_admin.py
